--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,107 +1,318 @@
-:root {
-  --max-width: 1100px;
-  --border-radius: 12px;
-  --font-mono: ui-monospace, Menlo, Monaco, 'Cascadia Mono', 'Segoe UI Mono',
-    'Roboto Mono', 'Oxygen Mono', 'Ubuntu Monospace', 'Source Code Pro',
-    'Fira Mono', 'Droid Sans Mono', 'Courier New', monospace;
-
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-
-  --primary-glow: conic-gradient(
-    from 180deg at 50% 50%,
-    #16abff33 0deg,
-    #0885ff33 55deg,
-    #54d6ff33 120deg,
-    #0071ff33 160deg,
-    transparent 360deg
-  );
-  --secondary-glow: radial-gradient(
-    rgba(255, 255, 255, 1),
-    rgba(255, 255, 255, 0)
-  );
-
-  --tile-start-rgb: 239, 245, 249;
-  --tile-end-rgb: 228, 232, 233;
-  --tile-border: conic-gradient(
-    #00000080,
-    #00000040,
-    #00000030,
-    #00000020,
-    #00000010,
-    #00000010,
-    #00000080
-  );
-
-  --callout-rgb: 238, 240, 241;
-  --callout-border-rgb: 172, 175, 176;
-  --card-rgb: 180, 185, 188;
-  --card-border-rgb: 131, 134, 135;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-
-    --primary-glow: radial-gradient(rgba(1, 65, 255, 0.4), rgba(1, 65, 255, 0));
-    --secondary-glow: linear-gradient(
-      to bottom right,
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0.3)
-    );
-
-    --tile-start-rgb: 2, 13, 46;
-    --tile-end-rgb: 2, 5, 19;
-    --tile-border: conic-gradient(
-      #ffffff80,
-      #ffffff40,
-      #ffffff30,
-      #ffffff20,
-      #ffffff10,
-      #ffffff10,
-      #ffffff80
-    );
-
-    --callout-rgb: 20, 20, 20;
-    --callout-border-rgb: 108, 108, 108;
-    --card-rgb: 100, 100, 100;
-    --card-border-rgb: 200, 200, 200;
-  }
-}
+@import url('https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Great+Vibes&family=Grechen+Fuemen&family=Josefin+Sans:ital,wght@1,100;1,300;1,500;1,700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Great+Vibes&family=Grechen+Fuemen&display=swap');
 
 * {
-  box-sizing: border-box;
-  padding: 0;
   margin: 0;
-}
-
-html,
-body {
-  max-width: 100vw;
-  overflow-x: hidden;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  /* background: url('../public/bgimg.png'); */
+  background-color: #fff;
+  background-size: cover;
+  background-attachment: fixed;
+  color: black;
 }
 
-a {
-  color: inherit;
+.a {
   text-decoration: none;
+  color: white;
+  font-size: 20px;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
+.app_name {
+  text-decoration: none;
+  color: red;
+  padding-right: 60px;
+  font-family: "Grechen Fuemen";
+}
+
+.tooltip-List {
+  position: absolute;
+  top: 1px;
+  right: 3%;
+  transform: translateX(-50%);
+  background-color: #000;
+  color: #fff;
+  padding: 5px 10px;
+  border-radius: 4px;
+  font-size: 12px;
+}
+
+.header_comp {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 17px;
+  font-weight: 600;
+}
+
+.details_header {
+  padding: 40px;
+}
+
+.nav_bar_main {
+  padding-top: 20px;
+  padding-bottom: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 100px;
+  background-color: #333545;
+}
+
+.nav_bar {
+  font-family: "Great Vibes" "Grechen Fuemen" "Josefin Sans";
+  display: flex;
+  font-weight: 600;
+  justify-content: center;
+  align-items: center;
+  gap: 50px;
+}
+
+.movie-list {
+  font-family: 'Gill Sans', 'Gill Sans MT', 'Calibri', 'Trebuchet MS', 'sans-serif';
+}
+
+.movie-list-card {
+  display: grid;
+  grid-template-columns: repeat(4, auto);
+  grid-gap: 100px;
+  justify-content: start;
+  align-items: center;
+  padding-top: 30px;
+  padding-left: 60px;
+  padding-right: 60px;
+}
+
+/* .moive_poster{
+  max-height: ;
+} */
+
+.card {
+  color: rgb(0, 0, 0);
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  padding: 15px;
+  /* background-color: lightslategrey;
+  box-shadow: 25px 25px 75px rgba(0, 0, 0, 0.75),
+    10px 10px 70px rgba(0, 0, 0, 0.25),
+    inset 5px 5px 10px rgba(0, 0, 0, 0.5); */
+  /* inset 5px 5px 20px rgba(0, 0, 0, 0.2),
+    inset -5px -5px 15px rgba(0, 0, 0, 0.75); */
+  border-radius: 10px;
+}
+
+.add_to_watchlist_btn {
+  color: white;
+  width: 160px;
+  padding: 5px 10px;
+  border-radius: 5px;
+  font-size: 13px;
+  font-weight: 800;
+  background-color: steelblue;
+}
+
+.Link {
+  border-radius: 7px;
+  text-align: center;
+  text-decoration: none;
+  color: black;
+  font-weight: 700;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: start;
+  gap: 10px;
+}
+
+.movie-list-card img {
+  border-radius: 10px;
+}
+
+.title {
+  text-align: center;
+  padding: 15px 0px;
+}
+
+.rating {
+  display: flex;
+  justify-content: start;
+  align-items: center;
+  gap: 10px;
+}
+
+.input {
+  background-color: azure;
+  border: 1px solid black;
+  outline: none;
+  padding: 10px 50px;
+  border-top-left-radius: 6px;
+  border-bottom-left-radius: 6px;
+  width: 280px;
+}
+
+.movie_details {
+  display: flex;
+  flex-direction: column;
+  gap: 25px;
+}
+
+.recommended {
+  padding-top: 10px;
+  padding-left: 70px;
+}
+
+.no_found {
+  font-size: 40px;
+}
+
+.release_date {
+  font-weight: 900;
+  color: black;
+  /* fontWeight: '900', color: 'black' */
+}
+
+.icon {
+  display: flex;
+  gap: 5px;
+  /* display: 'flex', gap: '5px' */
+}
+
+.id_page {
+  display: flex;
+  flex-direction: column;
+
+}
+
+.poster {
+  border-radius: 10px;
+}
+
+.icon_Star {
+  color: yellow;
+}
+
+.watchlist_error {
+  width: 100%;
+  height: 100%;
+  font-size: 50px;
+  font-family: 900;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  /* width: '100%', height: '70vh', 
+  fontSize: '50px', display: 'flex', 
+  justifyContent: 'center', alignItems: 'center', 
+  fontWeight: '900', textAlign: 'center' */
+}
+
+.search_btn {
+  padding: 10.7px 20px;
+  border: none;
+  border-top-right-radius: 6px;
+  border-bottom-right-radius: 6px;
+  background-color: blueviolet;
+  /* padding: '10.8px 20px', border: 'none', borderTopRightRadius: '6px', borderBottomRightRadius: '6px', backgroundColor: 'blueviolet' */
+}
+
+.loader {
+  /* Add your loader styles here */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  font-size: 20px;
+}
+
+
+
+
+
+.carousel {
+  position: relative;
+  width: 100%;
+  height: 400px;
+  margin-top: 10px;
+}
+
+.carousel-button {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  z-index: 1;
+  background: none;
+  border: none;
+  font-size: 24px;
+  color: #fff;
+  cursor: pointer;
+}
+
+.prev-button {
+  left: 0px;
+  background-color: #00000070;
+  padding: 4px 20px;
+  border-radius: 5px;
+}
+
+.next-button {
+  right: 0px;
+  background-color: #00000070;
+  padding: 4px 20px;
+  border-radius: 5px;
+}
+
+.carousel-items {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.carousel-item {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  transition: transfrom 0.5s ease-in-out;
+}
+
+.movie_title {
+  position: absolute;
+  /* color: #fff; */
+  font-weight: 900;
+  font-size: 40px;
+  bottom: 10%;
+  left: 5%;
+}
+
+.carousel-image {
+  width: 100%;
+  height: 100%;
+  border-radius: 10px;
+  /* object-fit: contain; */
+}
+
+
+.carousel-container {
+  margin-left: 10px;
+  margin-right: 10px;
+}
+
+.about_movie {
+  padding-top: 25px;
+  padding-left: 60px;
+  padding-bottom: 40px;
+}
+
+.about_movie p {
+  padding-top: 10px;
+  line-height: 1.5;
+  font-size: 25px;
 }
