--- a/styles/globals.css
+++ b/styles/globals.css
@@ -9,10 +9,7 @@
 }
 
 body {
-  /* background: url('../public/bgimg.png'); */
   background-color: #fff;
-  background-size: cover;
-  background-attachment: fixed;
   color: black;
 }
 
@@ -25,7 +22,6 @@ body {
 .app_name {
   text-decoration: none;
   color: red;
-  padding-right: 60px;
   font-family: "Grechen Fuemen";
 }
 
@@ -45,6 +41,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+  gap: 100px;
   font-size: 17px;
   font-weight: 600;
 }
@@ -83,13 +80,9 @@ body {
   justify-content: start;
   align-items: center;
   padding-top: 30px;
-  padding-left: 60px;
-  padding-right: 60px;
+  padding-left: 50px;
+  padding-right: 50px;
 }
-
-/* .moive_poster{
-  max-height: ;
-} */
 
 .card {
   color: rgb(0, 0, 0);
@@ -104,16 +97,6 @@ body {
   /* inset 5px 5px 20px rgba(0, 0, 0, 0.2),
     inset -5px -5px 15px rgba(0, 0, 0, 0.75); */
   border-radius: 10px;
-}
-
-.add_to_watchlist_btn {
-  color: white;
-  width: 160px;
-  padding: 5px 10px;
-  border-radius: 5px;
-  font-size: 13px;
-  font-weight: 800;
-  background-color: steelblue;
 }
 
 .Link {
@@ -131,6 +114,16 @@ body {
 
 .movie-list-card img {
   border-radius: 10px;
+  border: 0.1px solid black;
+}
+
+.movie-list-card img:hover {
+  border: none;
+  box-shadow: 25px 25px 75px rgba(0, 0, 0, 0.75),
+    10px 10px 70px rgba(0, 0, 0, 0.25),
+    inset 5px 5px 10px rgba(0, 0, 0, 0.5),
+    inset -5px -5px 10px rgba(0, 0, 0, 0.75),
+    inset 5px 5px 10px rgba(0, 0, 0, 1);
 }
 
 .title {
@@ -149,7 +142,9 @@ body {
   background-color: azure;
   border: 1px solid black;
   outline: none;
-  padding: 10px 50px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  padding-left: 30px;
   border-top-left-radius: 6px;
   border-bottom-left-radius: 6px;
   width: 280px;
@@ -173,13 +168,17 @@ body {
 .release_date {
   font-weight: 900;
   color: black;
-  /* fontWeight: '900', color: 'black' */
 }
 
 .icon {
   display: flex;
+  justify-content: start;
+  align-items: center;
   gap: 5px;
-  /* display: 'flex', gap: '5px' */
+}
+
+.add_to_watchlist_btn {
+  margin-left: 150px;
 }
 
 .id_page {
@@ -197,31 +196,27 @@ body {
 }
 
 .watchlist_error {
-  width: 100%;
-  height: 100%;
-  font-size: 50px;
-  font-family: 900;
+  /* width: 100%; */
+  height: 90vh;
+  /* font-size: 50px; */
+  font-weight: 700;
   text-align: center;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
-  /* width: '100%', height: '70vh', 
-  fontSize: '50px', display: 'flex', 
-  justifyContent: 'center', alignItems: 'center', 
-  fontWeight: '900', textAlign: 'center' */
+
 }
 
 .search_btn {
-  padding: 10.7px 20px;
+  padding: 10px 20px;
   border: none;
   border-top-right-radius: 6px;
   border-bottom-right-radius: 6px;
   background-color: blueviolet;
-  /* padding: '10.8px 20px', border: 'none', borderTopRightRadius: '6px', borderBottomRightRadius: '6px', backgroundColor: 'blueviolet' */
 }
 
 .loader {
-  /* Add your loader styles here */
   display: flex;
   justify-content: center;
   align-items: center;
@@ -236,7 +231,7 @@ body {
 .carousel {
   position: relative;
   width: 100%;
-  height: 400px;
+  height: 300px;
   margin-top: 10px;
 }
 
@@ -285,18 +280,32 @@ body {
 
 .movie_title {
   position: absolute;
-  /* color: #fff; */
-  font-weight: 900;
-  font-size: 40px;
+  border-radius: 5px;
+  padding: 0px 15px;
+  background-color: #0f010134;
+  color: #fff;
+  font-weight: 700;
+  font-size: 25px;
   bottom: 10%;
   left: 5%;
+}
+
+.carouselo_movie_title {
+  position: absolute;
+  bottom: 0;
+  border-radius: 10px;
+  padding: 0px 15px;
+  background-color: #00000096;
+  color: #fff;
+  font-size: 20px;
+  margin-left: 30px;
+  margin-bottom: 30px;
 }
 
 .carousel-image {
   width: 100%;
   height: 100%;
   border-radius: 10px;
-  /* object-fit: contain; */
 }
 
 
@@ -312,7 +321,8 @@ body {
 }
 
 .about_movie p {
+  word-spacing: 8px;
   padding-top: 10px;
   line-height: 1.5;
-  font-size: 25px;
+  font-size: 20px;
 }
