--- a/styles/globals.css
+++ b/styles/globals.css
@@ -61,7 +61,7 @@ body {
 }
 
 .nav_bar {
-  font-family: "Great Vibes" "Grechen Fuemen" "Josefin Sans";
+  font-family: "Great Vibes" "Grechen Fuemen";
   display: flex;
   font-weight: 600;
   justify-content: center;
