--- a/styles/globals.css
+++ b/styles/globals.css
@@ -61,12 +61,16 @@ body {
 }
 
 .nav_bar {
-  font-family: "Great Vibes";
+  font-family: "Great Fuemen";
   display: flex;
   font-weight: 600;
   justify-content: center;
   align-items: center;
   gap: 50px;
+}
+
+.movie-list {
+  font-family: 'Gill Sans', 'Gill Sans MT', 'Calibri', 'Trebuchet MS', 'sans-serif';
 }
 
 .movie-list-card {
